--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "mingyoung/dingtalk",
-    "description": "EasyDingTalk, Alibaba Dingtalk SDK for PHP",
+    "name": "jarenfeng/dingtalk",
+    "description": "EasyDingTalk, jaren fixed",
     "keywords": [
         "dingtalk",
         "dingding",
